# dragonfly

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release-please.yml  release.yml
docker/: Dockerfile
docs/: architecture.md  building.md  getting-started.md  index.md  pocketbase.md  project-structure.md  reminder-sync.md  security-audit.md
scripts/: build.ps1  build.sh  create-history.ps1  dev.ps1  dev.sh  docs.ps1  docs.sh  seed-alpha-beta.sql  seed-gamma-delta.sql  seed.ps1  seed.sh  setup.ps1  setup.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: backup.rs  mod.rs  notifications.rs  voice.rs
src/components/: DashboardPage.tsx  ErrorBoundary.tsx  KanbanBoard.tsx  KanbanColumn.tsx  NoteTreeItem.tsx  NotesPage.tsx  PassphraseGate.tsx  ProjectSelectionPage.tsx  QuickAddTask.tsx  ReleaseSelector.tsx  ReleasesPage.tsx  ReminderAlertModal.tsx  ReminderFormModal.tsx  RemindersPage.tsx  ScratchpadPage.tsx  SettingsPage.tsx  Sidebar.tsx  TaskCard.tsx  TaskModal.tsx  TodoPage.tsx  TodoTaskItem.tsx  UserSelector.tsx  VoiceRecorderModal.tsx
(+62 files in other folders)
