[package]
name = "dragonfly"
version = "0.1.17"
description = "DragonFly Task Management"
authors = ["Mchill007"]
edition = "2021"

[lib]
name = "dragonfly_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "rustls-tls", "builder"] }
tokio = { version = "1", features = ["fs", "rt"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
walkdir = "2"
chrono = "0.4"
tauri-plugin-single-instance = "2.4.0"
whisper-rs = "0.16"
reqwest = { version = "0.13", features = ["stream"] }
futures-util = "0.3"
hound = "3.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
